@@ -175,9 +175,16 @@
 								<!-- ###PICTO_ITEM### end -->
 							<!-- ###SECTION_FILE### end --><!-- ###SECTION_FILE_HIDE### end -->
 							<!-- ###CGU_FIELD### begin -->
+								<!-- ###SECTION_FILE_NOTLINKED### start -->
+									<!-- ###PICTO_ITEM### start -->
+									<div class="download-link">
+										<div class="file"><a href="#">###PICTO###</a></div>
+									</div>
+									<!-- ###PICTO_ITEM### end -->
+								<!-- ###SECTION_FILE_NOTLINKED### end -->
 								<div class="cgu">
-									<form action="###URL_LICENSE###" method="post" onsubmit="return valid_data_form();">
-										<input type="checkbox" name="###CGU###" id="cgu"/>
+									<form action="###URL_LICENSE###" method="post" onsubmit="return valid_data_form('cgu###UID_VALUE###');">
+										<input type="checkbox" name="###CGU###" id="cgu###UID_VALUE###"/>
 										###CGU_LABEL###
 										<input type="submit" name="###BTN_REGISTRATION###" value="###BTN_REGISTRATION_VALUE###" />
 									</form>
@@ -210,9 +217,16 @@
 								<!-- ###PICTO_ITEM### end -->
 							<!-- ###SECTION_FILE### end --><!-- ###SECTION_FILE_HIDE### end -->
 							<!-- ###CGU_FIELD### begin -->
+								<!-- ###SECTION_FILE_NOTLINKED### start -->
+									<!-- ###PICTO_ITEM### start -->
+									<div class="download-link">
+										<div class="file"><a href="#">###PICTO###</a></div>
+									</div>
+									<!-- ###PICTO_ITEM### end -->
+								<!-- ###SECTION_FILE_NOTLINKED### end -->
 								<div class="cgu">
-									<form action="###URL_LICENSE###" method="post" onsubmit="return valid_data_form();">
-										<input type="checkbox" name="###CGU###" id="cgu"/>
+									<form action="###URL_LICENSE###" method="post" onsubmit="return valid_data_form('cgu###UID_VALUE###');">
+										<input type="checkbox" name="###CGU###" id="cgu###UID_VALUE###"/>
 										###CGU_LABEL###
 										<input type="submit" name="###BTN_REGISTRATION###" value="###BTN_REGISTRATION_VALUE###" />
 									</form>
@@ -329,9 +343,16 @@
 			<!-- ###PICTO_ITEM### end -->
 		<!-- ###SECTION_FILE### end --><!-- ###SECTION_FILE_HIDE### end -->
 		<!-- ###CGU_FIELD### begin -->
+			<!-- ###SECTION_FILE_NOTLINKED### start -->
+				<!-- ###PICTO_ITEM### start -->
+				<div class="download-link">
+					<div class="file"><a href="#">###PICTO###</a></div>
+				</div>
+				<!-- ###PICTO_ITEM### end -->
+			<!-- ###SECTION_FILE_NOTLINKED### end -->
 		<div class="cgu">
-			<form action="###URL_LICENSE###" method="post" onsubmit="return valid_data_form();">
-				<input type="checkbox" name="###CGU###" id="cgu"/>
+			<form action="###URL_LICENSE###" method="post" onsubmit="return valid_data_form('cgu###UID_VALUE###');">
+				<input type="checkbox" name="###CGU###" id="cgu###UID_VALUE###"/>
 				###CGU_LABEL###
 				<input type="submit" name="###BTN_REGISTRATION###" value="###BTN_REGISTRATION_VALUE###" />
 			</form>
